--- a/style.css
+++ b/style.css
@@ -9,24 +9,20 @@
     src: url('./font/Causten-Light.otf');
 }
 
-/* Style the navigation bar */
-.navbar {
-    /* background-color: #f8f8f8; */
-    padding: 10px;
+ .navbar {
+     padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 102px;
 }
 
-/* Style the logo */
-.logo {
+ .logo {
     font-size: 24px;
     font-weight: bold;
 }
 
-/* Style the navigation links */
-.nav-links {
+ .nav-links {
     font-family: mtfont;
     list-style: none;
     display: flex;
@@ -40,8 +36,7 @@
     line-height: 26.4px;
 }
 
-/* Style the search field */
-.search-field {
+ .search-field {
     display: flex;
     align-items: center;
     gap: 5px;
@@ -66,8 +61,7 @@
     height: 20px;
 }
 
-/* Style the icons */
-.icons {
+ .icons {
     display: flex;
     align-items: center;
     gap: 12px;
@@ -94,8 +88,7 @@
     position: absolute;
     top: 50%;
     left: 193px;
-    /* border: 1px solid red; */
-    transform: translate(10%, -50%);
+     transform: translate(10%, -50%);
     color: white;
 
 
@@ -130,6 +123,39 @@
     text-align: left;
 
 }
+.icon {
+    color:rgba(255, 255, 255, 1);
+    position: absolute;
+    top: 50%;
+    width: 40px;
+    height: 40px;
+     transform: translateY(-50%);
+    cursor: pointer;
+  }
+  
+  .left-icon {
+    left: 40px;
+  }
+  
+  .right-icon {
+    right: 40px;
+  }
+
+.button {
+    background: rgba(255, 255, 255, 1);
+ 
+    border: none;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
+    gap: 12px;
+  }
+  .button1 {padding: 16px 72px;}
 
 @media (max-width: 768px) {
     .navbar {
