--- a/style.css
+++ b/style.css
@@ -324,6 +324,99 @@ flex-shrink: 0;
     width: 100%;
     height: auto;
 }
+.Big_saving_card_1{
+    position: absolute;
+   top: 50%;
+   left: 10px;
+    transform: translate(10%, -50%);
+    line-height: 30.07px;
+     display: flex;
+     flex-direction: column;
+     border: 1px solid red;
+     width: 10rem;
+height: 16.48981rem;
+color: #FFF;
+text-align: left;
+ }
+.Big_saving_card_2{
+   position: absolute;
+  top: 50%;
+  right: 30px;
+   transform: translate(10%, -50%);
+   line-height: 30.07px;
+   display: flex;
+     flex-direction: column;
+     border: 1px solid red;
+     width: 10rem;
+height: 16.48981rem;
+text-align: left;
+
+}
+.Big_saving_card_3{
+   position: absolute;
+  top: 50%;
+  right: 100px;
+   transform: translate(10%, -50%);
+   line-height: 30.07px;
+   display: flex;
+     flex-direction: column;
+     border: 1px solid red;
+     width: 10rem;
+height: 16.48981rem;
+color: #3C4242;
+font-size: 2rem;
+ text-align: left;
+}
+.big-saving-arrow{
+    width: 1.47638rem;
+height: 1.304rem;
+margin: auto;
+border: 1px solid red;
+}
+.btn{
+    display: flex;
+width: 8.25rem;
+height: 2.25rem;
+padding: 1rem 0.5rem;
+justify-content: center;
+align-items: center;
+gap: 0.75rem;
+ cursor: pointer;
+background-color: transparent;
+border-radius: 0.25rem;
+border: 1px solid #FFF;
+
+}
+.big-saving-1{
+    color: #FFF;
+font-size: 1.75rem;
+font-family: Core Sans C;
+font-style: normal;
+font-weight: 600;
+line-height: 2.40194rem;
+letter-spacing: 0.035rem;
+}
+.big-saving-2{
+    color: #FFF;
+font-size: 0.875rem;
+font-family: Causten;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+}
+.big-saving-3{
+    color: #FFF;
+font-size: 1.125rem;
+font-family: Causten;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
+
+
+
+/*  */
 
 #what_made{
     border:1px solid red;
@@ -342,33 +435,15 @@ flex-shrink: 0;
     
 
  }
+ .button-what_made{
+    background: #FFF;
+ }
  .wrapper_what_made>img{
     width: 38.3rem;
     height: 39.9rem;
     flex-shrink: 0;
  }
- .Big_saving_card_1{
-     position: absolute;
-    top: 50%;
-    left: 10px;
-     transform: translate(10%, -50%);
-     line-height: 30.07px;
-     text-align: center;
- }
- .Big_saving_card_2{
-    position: absolute;
-   top: 50%;
-   right: 30px;
-    transform: translate(10%, -50%);
-    line-height: 30.07px;
-}
-.Big_saving_card_3{
-    position: absolute;
-   top: 50%;
-   right: 100px;
-    transform: translate(10%, -50%);
-    line-height: 30.07px;
-}
+
 .what_made_image{
     position: relative;
 }
@@ -380,6 +455,15 @@ flex-shrink: 0;
    transform: translate(10%, -50%);
   line-height: 30.07px;
   color: #ccc;
+}
+.what_made_content>h4{
+    color: #FFF;
+font-size: 1.25rem;
+font-family: Causten;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+letter-spacing: 0.0625rem;
 }
 
 
@@ -650,6 +734,7 @@ font-family: Causten;
 font-style: normal;
 font-weight: 500;
 line-height: 216.9%;
+text-align: left;
   }
   
   .social {
