new arrival item name text align to left

--- a/style.css
+++ b/style.css
@@ -292,6 +292,7 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 letter-spacing: 0.0125rem;
+text-align: left;
    }
 .big-saving-zone{
     margin: auto;
